layout issue fixed

--- a/src/components/Meme-Generator/memeEditor.css
+++ b/src/components/Meme-Generator/memeEditor.css
@@ -21,7 +21,7 @@
 @media (min-width: 641px) {
   .container123 {
     display: grid;
-    grid-template-columns: 10fr 1fr;
+    grid-template-columns: 1fr 10fr;
     height: 100vh; /* Adjust height as needed */
   }
 
